# nand7400

./: .gitignore  .swift-format  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  build.rs
.cargo/: config.toml
.circleci/: config.yml
Sources/Nand7400Asm/: Nand7400Asm.swift
bindings/swift/: Nand7400.swift  Nand7400Asm.swift  Nand7400AsmFFI.h  Nand7400FFI.h
examples/using-in-swift/using-in-swift/: ContentView.swift  using_in_swiftApp.swift
examples/using-in-swift/using-in-swift.xcodeproj/: project.pbxproj
examples/using-in-swift/using-in-swift.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
examples/using-in-swift/using-in-swift.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: module.modulemap
nand7400/: Cargo.toml  README.md
nand7400-asm/: Cargo.toml  build.rs
nand7400-asm/src/: Nand7400Asm.swift  Nand7400AsmFFI.h  lib.rs  lib.udl
nand7400-ffi/: Cargo.toml  build.rs
nand7400-ffi-bindings/swift/: Nand7400.swift  Nand7400FFI.h  Nand7400FFI.modulemap
nand7400-ffi/examples/XcodeExample/Example/: ContentView.swift
nand7400-ffi/examples/XcodeExample/Example.xcodeproj/: .gitignore  project.pbxproj
nand7400-ffi/examples/XcodeExample/Example.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
nand7400-ffi/src/: bin.rs  ffi.udl  ffi.uniffi.rs  lib.rs
nand7400-fuzz/: Cargo.toml
nand7400-fuzz/seeds/: simple_basic.asm  with_comments.asm
nand7400-fuzz/src/: config.rs  main.rs
nand7400/examples/XcodeExample/Example/: ContentView.swift
nand7400/examples/XcodeExample/Example.xcodeproj/: .gitignore  project.pbxproj
nand7400/examples/simple/: assembly.asm  main.rs
nand7400/examples/simple_rust/: assembly.asm  assembly.conf.json  main.rs
nand7400/examples/swift_and_xcode/Example/: ContentView.swift  ExampleApp.swift
nand7400/examples/swift_and_xcode/Example.xcodeproj/: .gitignore  project.pbxproj
nand7400/examples/swift_and_xcode/Example.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
nand7400/examples/swift_and_xcode/Example.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
nand7400/src/: ast.rs  config.rs  errors.rs  lib.rs  lib.udl  tests.rs  token.rs
nand7400/src/assembler/: config.rs  errors.rs  mod.rs
nand7400/src/assembler/parser/: ast.rs  errors.rs  mod.rs  tests.rs
nand7400/src/assembler/parser/lexer/: mod.rs  tests.rs  token.rs
nand7400/src/assembler/position/: tests.rs
nand7400/src/assembler/tests/: mod.rs
nand7400/src/assembler/tests/programs/: simple_jump_label.asm  with_comments.asm
nand7400/src/errors/: mod.rs  parsing.rs  position.rs
nand7400/src/ffi/: errors.rs  mod.rs
nand7400/src/formatter/: mod.rs  tests.rs
nand7400/src/lexer/: errors.rs  mod.rs  tests.rs  token.rs
nand7400/src/parser/: DFA.md  assembly.pest  ast.rs  errors.rs  mod.rs  tests.rs
nand7400/src/parser/lexer/: mod.rs  tests.rs  token.rs
nand7400/src/parsing/: assembly.pest  mod.rs  tests.rs  utils.rs
nand7400/src/parsing/instructions/: mod.rs  tests.rs
nand7400/src/parsing/values/: mod.rs  tests.rs
nand7400/src/position/: mod.rs
nand7400/src/tests/: mod.rs
nand7400/src/tests/programs/: invalid_args.asm  simple.asm  simple_basic.asm  test.asm  with_cmplx_num_fmts.asm  with_comments.asm  with_positives_negatives.asm
nand7400asm/: Cargo.toml  build.rs
nand7400asm-swift/: Nand7400Asm.swift  Nand7400AsmFFI.h
nand7400asm-swift/scaffold/: Nand7400Asm.swift  Nand7400AsmFFI.h  Nand7400AsmFFI.modulemap
nand7400asm-uniffi/: Cargo.toml
nand7400asm-uniffi/examples/XcodeExample/Example/: ContentView.swift  ExampleApp.swift
nand7400asm-uniffi/examples/XcodeExample/Example.xcodeproj/: project.pbxproj
nand7400asm-uniffi/examples/XcodeExample/Example.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
nand7400asm-uniffi/src/: lib.udl
nand7400asm/examples/XcodeExample/Example/: ContentView.swift
nand7400asm/examples/XcodeExample/Example.xcodeproj/: project.pbxproj
nand7400asm/examples/XcodeExample/Example.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
nand7400asm/src/: ast.rs  config.rs  error.rs  errors.rs  lib.rs  lib.udl
nand7400asm/src/ffi/: mod.rs
nand7400asm/src/parsing/: instructions.rs  mod.rs  values.rs
nand7400asm/src/parsing/instructions/: mod.rs
nand7400asm/src/parsing/values/: mod.rs  tests.rs
src/: lib.udl
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: main.rs
