[workspace]
	default-members = ["nand7400"]
	exclude         = ["nand7400-bindings"]        # It's not a Rust crate!
	members         = ["nand7400", "nand7400-ffi"]
	resolver        = "2"

	[workspace.package]
		authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
		edition = "2021"
		license = "MIT"
		version = "0.1.0"

	[workspace.dependencies]
		# Global UniFFI version so everything uses the same version -- no bugs where symbols are not
		# generated with the same name!
		uniffi = { version = "~0.24.1" }
