[workspace]

	# The bindings are a member, but not a default one, because they are not tested. It's safe to use them without 
	# testing because the rust crate they pull from is tested instead.
	default-members = ["nand7400"]
	members         = ["nand7400", "nand7400-ffi"]

	exclude  = ["nand7400-ffi-bindings"] # It's not a Rust crate!
	resolver = "2"

	[workspace.package]
		authors    = ["Ian Pratt <ianjdpratt@gmail.com>"]
		categories = ["compilers", "embedded", "hardware-support"]
		edition    = "2021"
		homepage   = "https://github.com/cogsandsquigs/nand7400"
		keywords   = ["assembler", "compiler", "cpu", "nand7400"]
		license    = "MIT"
		readme     = "README.md"
		repository = "https://github.com/cogsandsquigs/nand7400"
		version    = "0.4.0-alpha.1"
