[package]
	authors     = { workspace = true }
	description = "An assembler library for the nand7400 computer."
	edition     = { workspace = true }
	license     = { workspace = true }
	name        = "nand7400-asm"
	version     = "0.0.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
	crate-type = ["staticlib"]
	name       = "nand7400_asm"

[dependencies]
	uniffi = "~0.23"

[build-dependencies]
	uniffi = { version = "~0.23", features = ["build"] }
