[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400-ffi"
	version = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# The code of the library itself.
	nand7400 = { path = "../nand7400" }

	# Error handling
	miette = "~5"   # For pretty errors.
	snafu  = "~0.7" # For error handling.

	# Binding to Swift
	uniffi = { workspace = true }

[build-dependencies]
	# Binding to Swift during buildtime.
	uniffi = { workspace = true, features = ["build"] }

[lib]
	crate-type = ["cdylib", "staticlib"]
