[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400-fuzz"
	version = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Fuzzing.
	afl       = "~0.13" # AFL++ for rust
	arbitrary = "~1"    # Dependency of AFL macros. Also easy to convert raw bytes into strings.

	# Parsing config files.
	serde_json = "~1" # Parse the JSON config for the assembler.

	# The actual library.
	nand7400 = { path = "../nand7400" }
