[package]
	authors     = { workspace = true }
	description = "An assembler library for the nand7400 computer, created by me during my internship at the WCL."
	edition     = { workspace = true }
	license     = { workspace = true }
	name        = "nand7400"
	readme      = { workspace = true }
	version     = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Parsing 
	pest        = "~2"                                      # Parsing source code
	pest_derive = "~2"                                      # Parsing source code
	serde       = { version = "~1", features = ["derive"] } # De/serialization

	# Error handling
	miette    = "~5" # For pretty errors.
	thiserror = "~1" # To make error handling easier.

	# Misc.
	itertools  = "~0.11" # To make iterators nicer.
	num-traits = "~0.2"  # For parsing generic signed and unsigned numbers from text.

[dev-dependencies]
	serde_json = "~1" # To parse test assembly configs.
