[package]
	authors     = { workspace = true }
	categories  = { workspace = true }
	description = "An assembler library for the nand7400 computer, created by me during my internship at the WCL."
	edition     = { workspace = true }
	homepage    = { workspace = true }
	keywords    = { workspace = true }
	license     = { workspace = true }
	name        = "nand7400"
	readme      = { workspace = true }
	repository  = { workspace = true }
	version     = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Parsing 
	serde = { version = "^1", features = ["derive"] } # De/serialization

	# Error handling
	miette    = "^5" # For pretty errors.
	thiserror = "^1" # To make error handling easier.

	# Formatting 
	once_cell = "1.18.0" # For lazy statics (to avoid re-compiling the regex).
	regex     = "^1.9.3" # For formatting code (yes this is a weird dependency for that).

	# Misc.
	num-traits = "^0.2" # For parsing generic signed and unsigned numbers from text.

[dev-dependencies]
	miette     = { version = "^5", features = ["fancy"] } # For pretty errors.
	serde_json = "^1"                                     # To parse test assembly configs.
