[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400asm-uniffi"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	uniffi = "0.23.0"

[build-dependencies]
	uniffi = { version = "0.23.0", features = ["build"] }

[lib]
	crate-type = ["staticlib"]
