[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400asm"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Serializing/deserializing
	serde = { version = "~1", features = ["derive"] }

	# Error handling
	snafu = "~0.7"

	# Binding to Swift
	# uniffi = { version = "~0.24.1", optional = true }
	uniffi = { version = "~0.24.1", optional = false }

[build-dependencies]
	# Binding to Swift during buildtime.
	# uniffi = { version = "~0.24.1", features = ["build"], optional = true }
	uniffi = { version = "~0.24.1", features = ["build"], optional = false }

[features]
	# uniffi = ["dep:uniffi"]

[lib]
	crate-type = ["rlib", "staticlib"]
