[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400asm"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Serializing/deserializing
	serde = { version = "~1", features = ["derive"] }

	# Error handling
	snafu = "~0.7"

	# Binding to Swift
	uniffi = { workspace = true, optional = true }

[build-dependencies]
	# Binding to Swift during buildtime.
	uniffi = { workspace = true, features = ["build"], optional = true }

[features]
	uniffi = ["dep:uniffi"]

[lib]
	crate-type = ["rlib", "staticlib"]
