[package]
	authors = { workspace = true }
	edition = { workspace = true }
	license = { workspace = true }
	name    = "nand7400asm"
	version = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Parsing 
	nom   = "~7"                                      # Parser combinator for parsing assembly code
	serde = { version = "~1", features = ["derive"] } # de/serialization

	# Error handling
	miette = "~5"   # For pretty errors.
	snafu  = "~0.7" # For error handling.

	# Binding to Swift
	uniffi = { workspace = true, optional = true }

[build-dependencies]
	# Binding to Swift during buildtime.
	uniffi = { workspace = true, features = ["build"], optional = true }

[features]
	# Optionally enable binding to Swift, so we don't have to compile uniffi every time.
	uniffi = ["dep:uniffi"]

[lib]
	crate-type = ["rlib", "staticlib"]
